third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/basic-unknown-escape.stderr
TOML parse error at line 1, column 8
  |
1 | a = "\@"
  |        ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
